Wed May 17 09:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_ipc.h:
        * ace/os_include/sys/os_socket.h:
        * ace/os_include/sys/os_stat.h:
        * ace/os_include/sys/os_types.h:
          Removed psos support

        * ace/os_include/sys/os_mman.h:
          Removed madvice prototype and ACE_LACKS_MADVISE_PROTOTYPE, it
          is not set in any config file

Wed May 17 02:23:31 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/Log_Msg_IPC.cpp:

          Fix typo exposed on systems with ACE_HAS_STREAM_PIPES defined.
          I'll leave it to Will & Doug to do whatever the TO DO said to do.

Tue May 16 22:23:55 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/Log_Msg_IPC.cpp
        * ace/Log_Record.cpp
        * ace/Log_Record.h
        * ace/Log_Record.inl
        * netsvcs/lib/Client_Logging_Handler.cpp
        * netsvcs/lib/Server_Logging_Handler_T.cpp

          Fixed some problems that stemmed from changing ACE_Log_Msg
          msg_data_ from a fixed-size array to a dynamically-sized array.
          Thanks to Keith Muzzioli <Keith_W_Muzzioli at raytheon dot com>,
          John Black <John_K_Black at Raytheon dot com>, and Mitsuo
          Fukasawa <fukasawa_mitsuo at nifty dot com> for reporting this
          and to Doug Schmidt for helping to fix it!

Tue May 16 13:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_time.inl:
        * ace/OS_NS_time.{h,cpp,inl}:
          Removed chorus and psos support

        * ace/OS_Thread_Adapter.cpp:
          Removed psos support

Tue May 16 13:09:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_wait.{h,inl}:
          Remove chorus support

        * ace/OS_NS_stropts.inl:
        * ace/OS_NS_sys_stat.inl:
        * ace/OS_NS_string.inl:
          Removed psos support

Tue May 16 13:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
